修复溜冰鞋和落雪靴的玩家模型