@@ -6,6 +6,7 @@ import com.linngdu664.bsf3lite.client.model.SnowFallBootsModel;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.model.Model;
+import net.minecraft.client.model.geom.EntityModelSet;
 import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.resources.model.EquipmentClientInfo;
 import net.minecraft.world.InteractionHand;
@@ -23,12 +24,14 @@ import java.util.Map;
 
 @EventBusSubscriber(modid = Main.MODID, value = Dist.CLIENT)
 public class ClientExtensionRegistry {
+    private static final HumanoidModel.ArmPose BSF_WEAPON = HumanoidModel.ArmPose.valueOf("BSF3LITE_WEAPON");
+
     @SubscribeEvent
     public static void registerClientExtensions(RegisterClientExtensionsEvent event) {
         IClientItemExtensions weaponExtensions = new IClientItemExtensions() {
             @Override
             public HumanoidModel.ArmPose getArmPose(@NonNull LivingEntity entity, @NonNull InteractionHand hand, @NonNull ItemStack itemStack) {
-                return HumanoidModel.ArmPose.valueOf("BSF3LITE_WEAPON");
+                return BSF_WEAPON;
             }
         };
         event.registerItem(weaponExtensions, ItemRegistry.SNOWBALL_SHOTGUN);
@@ -36,27 +39,39 @@ public class ClientExtensionRegistry {
         event.registerItem(weaponExtensions, ItemRegistry.IMPLOSION_SNOWBALL_CANNON);
 
         event.registerItem(new IClientItemExtensions() {
+            private HumanoidModel<?> cachedModel;
+
             @Override
             public Model getHumanoidArmorModel(ItemStack itemStack, EquipmentClientInfo.LayerType layerType, Model original) {
-                return new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of(
-                        "left_leg", new IceSkatesModel(Minecraft.getInstance().getEntityModels().bakeLayer(IceSkatesModel.LAYER_LOCATION)).bone,
-                        "right_leg", new IceSkatesModel(Minecraft.getInstance().getEntityModels().bakeLayer(IceSkatesModel.LAYER_LOCATION)).bone,
-                        "head", new ModelPart(Collections.emptyList(), Map.of("hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()))),
-                        "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                        "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                        "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                if (cachedModel == null) {
+                    EntityModelSet entityModelSet = Minecraft.getInstance().getEntityModels();
+                    cachedModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of(
+                            "left_leg", new IceSkatesModel(entityModelSet.bakeLayer(IceSkatesModel.LEFT_LAYER)).bone,
+                            "right_leg", new IceSkatesModel(entityModelSet.bakeLayer(IceSkatesModel.RIGHT_LAYER)).bone,
+                            "head", new ModelPart(Collections.emptyList(), Map.of("hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()))),
+                            "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                            "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                            "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                }
+                return cachedModel;
             }
         }, ItemRegistry.ICE_SKATES);
         event.registerItem(new IClientItemExtensions() {
+            private HumanoidModel<?> cachedModel;
+
             @Override
             public Model getHumanoidArmorModel(ItemStack itemStack, EquipmentClientInfo.LayerType layerType, Model original) {
-                return new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of(
-                        "left_leg", new SnowFallBootsModel(Minecraft.getInstance().getEntityModels().bakeLayer(SnowFallBootsModel.LAYER_LOCATION)).bone,
-                        "right_leg", new SnowFallBootsModel(Minecraft.getInstance().getEntityModels().bakeLayer(SnowFallBootsModel.LAYER_LOCATION)).bone,
-                        "head", new ModelPart(Collections.emptyList(), Map.of("hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()))),
-                        "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                        "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                        "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                if (cachedModel == null) {
+                    EntityModelSet entityModelSet = Minecraft.getInstance().getEntityModels();
+                    cachedModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of(
+                            "left_leg", new SnowFallBootsModel(entityModelSet.bakeLayer(SnowFallBootsModel.LEFT_LAYER)).bone,
+                            "right_leg", new SnowFallBootsModel(entityModelSet.bakeLayer(SnowFallBootsModel.RIGHT_LAYER)).bone,
+                            "head", new ModelPart(Collections.emptyList(), Map.of("hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()))),
+                            "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                            "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                            "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                }
+                return cachedModel;
             }
         }, ItemRegistry.SNOW_FALL_BOOTS);
     }
